# pyffi

./: .gitignore  .gitmodules  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.rst  appveyor.yml  authors.html  changes.html  contribute.html  genindex.html  glossary.html  index.html  install.html  intro.html  license.html  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py  thanks.html  todo.html
docs/: changes.rst  conf.py  glossary.rst  index.rst
docs/pyffi/: context.rst  errors.rst
examples/simple/: simple.py
pyffi/: __init__.py  abc.py  context.py  errors.py  index.html  object_models.html
pyffi/engines/: __init__.py
pyffi/formats/: __init__.py  bsa.html  cgf.html  dae.html  dds.html  egm.html  egt.html  esp.html  index.html  kfm.html  nif.html  tga.html  tri.html
pyffi/object_models/: __init__.py  any_type.py  array_type.py  binary_type.py  common.py  editable.py  simple_type.py
pyffi/qskope/: __init__.py  detail_delegate.py  detail_model.py  detail_tree.py  global_model.py  global_tree.py
pyffi/spells/: __init__.py  cgf.html  check.py  dds.html  dds.py  index.html  kfm.html  kfm.py  nif.html  tga.html  tga.py
pyffi/types/: __init__.py  any.py  array.py  base.py  basic.py  binary.py  bitfield.py  common.py  editable.py  enum.py  simple.py
pyffi/utils/: __init__.py  (+11 more)
requirements/: requirements-dev.txt  requirements-docs.txt
scripts/: patch_recursive_apply.py  patch_recursive_make.py  qskope.py  rockstar_pack_dir_img.py  rockstar_unpack_dir_img.py
tests/: test_doctests.py
todo/: nifvisualizer.py
win-install/: pyffi.nsh
(+105 files in other folders)
