[wheel]
universal = 1

[metadata]
license_file = LICENSE.rst

[coverage:run]
source = pyffi
omit=
    pyffi/formats/nif/nifxml/*
    pyffi/formats/kfm/kfmxml/*

[tool:pytest]
addopts = --cov-report term-missing --cov-report html:htmlcov --cov=pyffi --cov=scripts -v
log_file = tests/pytest.log
testpaths = tests
